// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram addFlowNodeStateOverlay should add active overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-active.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram addFlowNodeStateOverlay should add canceled light overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-canceled-light.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram addFlowNodeStateOverlay should add completed dark overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-completed-dark.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram addFlowNodeStateOverlay should add completed light overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-completed-light.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram addFlowNodeStateOverlay should add incident overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-incident.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram addFlowNodeStateOverlay should add terminated dark overlay 1`] = `
Object {
  "html": <img
    src="diagram-badge-single-instance-canceled-dark.svg"
    width="24"
    height="24"
/>,
  "position": Object {
    "bottom": 14,
    "left": -10,
  },
}
`;

exports[`Diagram should render Diagram with controls 1`] = `
<styled.div>
  <Themed(styled.div)
    innerRef={[Function]}
  />
  <DiagramControls
    handleZoomIn={[Function]}
    handleZoomOut={[Function]}
    handleZoomReset={[Function]}
  />
</styled.div>
`;
